# cpp_garbage_collector

./: .gitignore  README.md
algo/toolbox/: fibonacci.cpp  fibonacci_huge.cpp  fibonacci_huge.py  fibonacci_last_digit.cpp  fibonacci_partial_sum.cpp  fibonacci_sum_last_digit.cpp  gcd.cpp  lcm.cpp  max_pairwise_product.cpp
belts/white/final_project/: CMakeLists.txt
belts/white/week_1/: quadro_equation.cpp
belts/white/week_2/: BuildMapValuesSet.cpp  anagramms.cpp  bus_2.cpp  isPalindrom.cpp  mean_temp.cpp  move_strings.cpp  queue.cpp  reverse.cpp
belts/white/week_3/: module_sort.cpp  names_2.cpp
belts/white/week_4/: file_draft.cpp  function.cpp  lecture_title.cpp  student_list.cpp  table_processing.cpp
belts/white/week_4_rational/: rational_eq_add_sub.cpp  rational_throw.cpp
belts/yellow/week_1/: avg_temp.cpp  elem_reference.cpp  region_base.cpp  sqr_all.cpp  template_refactoring.cpp
belts/yellow/week_2/: CMakeLists.txt  correct.cpp  starter.cpp  test_person.cpp
belts/yellow/week_4/: CMakeLists.txt  find_greater_elements.cpp  find_nearest_elements.cpp  find_starts_with_string.cpp  merge_sort_3_splits.cpp  print_permutations.cpp  remove_duplicates.cpp  split_into_words.cpp
wba_belts/white_belt/: euclid.cpp
wba_belts/white_belt/final_project/: CMakeLists.txt  my_database.cpp  project_template.cpp
wba_belts/white_belt/week_1/: sum.cpp
wba_belts/white_belt/week_2/: PalindromFilter.cpp  a.exe.stackdump  bus_1.cpp  bus_3.cpp  deal_with_it.cpp  factorial.cpp  maximizator.cpp  reverse_2.cpp  synonyms.cpp  unique_words.cpp
wba_belts/white_belt/week_4/: CMakeLists.txt  a  a.out  ensure_equal.cpp  function.cpp  input.txt  lecture_title.cpp  precision_manip.cpp  rational.cpp  student_list.cpp  time_server.cpp  work_with_file.cpp
wba_belts/white_belt/week_4_rational/: CMakeLists.txt  rational_calculator.cpp  rational_interface.cpp  rational_io.cpp  rational_map.cpp  rational_mult_div.cpp
wba_belts/yellow_belt/week_3/: CMakeLists.txt
wba_belts/yellow_belt/week_3/decomposition/: bus_manager.cpp  bus_manager.h  main.cpp
wba_belts/yellow_belt/week_3/phone_number/: phone_number.cpp
wba_belts/yellow_belt/week_3/sum_reverse_sort/: SRS_tests.cpp  sum_reverse_sort.cpp  sum_reverse_sort.h  test_runner.h
wba_belts/yellow_belt/week_4/: CMakeLists.txt  build_expression.cpp  build_expression_without_redundant.cpp  find_starts_with_char.cpp  merge_sort_2_splits.cpp  persons_names.cpp  print_stats.cpp  print_vector_part.cpp
(+25 files in other folders)
