cmake_minimum_required(VERSION 3.17)
project(week_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(week_4
        file.txt
        file_draft.cpp
        function.cpp
        input.txt
        lecture_title.cpp
        output.txt
        precision_manip.cpp
        student_list.cpp
        table_processing.cpp
        work_with_file.cpp
        ensure_equal.cpp time_server.cpp)
